<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.group30.assignment3.MainActivity">

    <Button
        android:id="@+id/btn_collectData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/collectData"
        app:layout_constraintBottom_toTopOf="@+id/btn_ml_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_Activity"
        app:layout_constraintVertical_bias="0.212" />

    <RadioGroup
        android:id="@+id/rg_Activity"
        android:layout_width="351dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_walk"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/walk"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <RadioButton
            android:id="@+id/rb_jog"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/jog"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/rb_run"
            app:layout_constraintStart_toEndOf="@+id/rb_walk"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rb_run"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/run"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>




    <Button
        android:id="@+id/btn_ml_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:text="@string/ml_algo_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rg_Activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_collectData" />


</android.support.constraint.ConstraintLayout>
